--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SetUp</title>
-    <link rel="shortcut icon" href="src/img/computer.png">
+    <link rel="shortcut icon" href="src/img/tenis.png">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Heebo:wght@100..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
@@ -34,85 +34,86 @@
         <section>
             <h2>Keyboard & Mouse</h2>
             <ul class="list">
-                <li><a class="link-list" href="https://acortar.link/lP69KF" target="_blank">Logitch MX Keys</a></li>
-                <li><a class="link-list" href="https://acortar.link/XsDoQF" target="_blank">Logitch MX Keys Mini</a></li>
-                <li><a class="link-list" href="https://acortar.link/g0Rgfe" target="_blank">Reposamuñecas</a></li>
-                <li><a class="link-list" href="https://acortar.link/eFO6cV" target="_blank">Logitch MX Master 3</a></li>
-                <li><a class="link-list" href="https://acortar.link/MVKTB5" target="_blank">Logitch MX Master 3s</a></li>
+                <li class="list-content"><a class="link-list" href="https://acortar.link/lP69KF" target="_blank">Logitch MX Keys</a></li>
+                <li class="list-content"><a class="link-list" href="https://acortar.link/XsDoQF" target="_blank">Logitch MX Keys Mini</a></li>
+                <li class="list-content"><a class="link-list" href="https://acortar.link/g0Rgfe" target="_blank">Reposamuñecas</a></li>
+                <li class="list-content"><a class="link-list" href="https://acortar.link/eFO6cV" target="_blank">Logitch MX Master 3</a></li>
+                <li class="list-content"><a class="link-list" href="https://acortar.link/MVKTB5" target="_blank">Logitch MX Master 3s</a></li>
             </ul>
         </section><!-- Keyboard & Mouse -->
 
         <section>
             <h2>Laptop / iPad Stands</h2>
             <ul class="list">
-                <li><a class="link-list" href="https://acortar.link/yCtjrd" target="_blank">Laptop Stand</a></li>
-                <li><a class="link-list" href="https://acortar.link/RwxPUD" target="_blank">Laptop Holder</a></li>
-                <li><a class="link-list" href="https://acortar.link/q554xI" target="_blank">iPad Stand</a></li>
+                <li class="list-content"><a class="link-list" href="https://acortar.link/yCtjrd" target="_blank">Laptop Stand</a></li>
+                <li class="list-content"><a class="link-list" href="https://acortar.link/RwxPUD" target="_blank">Laptop Holder</a></li>
+                <li class="list-content"><a class="link-list" href="https://acortar.link/q554xI" target="_blank">iPad Stand</a></li>
             </ul>
         </section><!-- Laptop / iPad Stands -->
 
         <section>
             <h2>Laptops</h2>
             <ul class="list">
-                <li><a class="link-list" href="https://acortar.link/xteu9k" target="_blank">HUAWEI D14 i7 14th</a></li>
-                <li><a class="link-list" href="https://acortar.link/T2Cbnr" target="_blank">MacBook Air M2</a></li>
+                <li class="list-content"><a class="link-list" href="https://acortar.link/xteu9k" target="_blank">HUAWEI D14 i7 14th</a></li>
+                <li class="list-content"><a class="link-list" href="https://acortar.link/T2Cbnr" target="_blank">MacBook Air M2</a></li>
             </ul>
         </section><!-- Laptops -->
 
         <section>
             <h2>PC</h2>
             <ul class="list">
-                <li><a class="link-list" href="https://acortar.link/Fpg5qn" target="_blank">Beelink SEi14</a></li>
-                <li><a class="link-list" href="https://acortar.link/J4srHn" target="_blank">Beelink GTi14</a></li>
+                <li class="list-content"><a class="link-list" href="https://acortar.link/Fpg5qn" target="_blank">Beelink SEi14</a></li>
+                <li class="list-content"><a class="link-list" href="https://acortar.link/J4srHn" target="_blank">Beelink GTi14</a></li>
+                <li class="list-content"><a class="link-list" href="pc.html" target="_blank">PC i7 12th</a></li>
             </ul>
         </section><!-- PC -->
 
         <section>
             <h2>Audio</h2>
             <ul class="list">
-                <li><a class="link-list" href="https://acortar.link/Lts0lN" target="_blank">Sony WH-1000XM4</a></li>
-                <li><a class="link-list" href="https://acortar.link/FY8lhw" target="_blank">Sonos Ace</a></li>
+                <li class="list-content"><a class="link-list" href="https://acortar.link/Lts0lN" target="_blank">Sony WH-1000XM4</a></li>
+                <li class="list-content"><a class="link-list" href="https://acortar.link/FY8lhw" target="_blank">Sonos Ace</a></li>
             </ul>
         </section><!-- Audio -->
 
         <section>
             <h2>Monitor</h2>
             <ul class="list">
-                <li><a class="link-list" href="https://acortar.link/in6QG4" target="_blank">LG UltraGear 34</a></li>
-                <li><a class="link-list" href="https://acortar.link/NLaSs0" target="_blank">GIGABYTE 34</a></li>
-                <li><a class="link-list" href="https://acortar.link/TfEEdt" target="_blank">Monitor Light</a></li>
+                <li class="list-content"><a class="link-list" href="https://acortar.link/in6QG4" target="_blank">LG UltraGear 34</a></li>
+                <li class="list-content"><a class="link-list" href="https://acortar.link/NLaSs0" target="_blank">GIGABYTE 34</a></li>
+                <li class="list-content"><a class="link-list" href="https://acortar.link/TfEEdt" target="_blank">Monitor Light</a></li>
             </ul>
         </section><!-- Monitor -->
 
         <section>
             <h2>Notepads</h2>
             <ul class="list">
-                <li><a class="link-list" href="https://acortar.link/WP31po" target="_blank">Notepad A4</a></li>
-                <li><a class="link-list" href="https://acortar.link/YWGzhU" target="_blank">Logitech XL</a></li>
+                <li class="list-content"><a class="link-list" href="https://acortar.link/WP31po" target="_blank">Notepad A4</a></li>
+                <li class="list-content"><a class="link-list" href="https://acortar.link/YWGzhU" target="_blank">Logitech XL</a></li>
             </ul>
         </section><!-- Notepads -->
 
         <section>
             <h2>WiFi & Connections</h2>
             <ul class="list">
-                <li><a class="link-list" href="https://acortar.link/zuWyq4" target="_blank">TP-Link</a></li>
-                <li><a class="link-list" href="https://acortar.link/VNvfsC" target="_blank">Regleta Escondida</a></li>
-                <li><a class="link-list" href="https://acortar.link/2CGc8p" target="_blank">Thunderbolt</a></li>
+                <li class="list-content"><a class="link-list" href="https://acortar.link/zuWyq4" target="_blank">TP-Link</a></li>
+                <li class="list-content"><a class="link-list" href="https://acortar.link/VNvfsC" target="_blank">Regleta Escondida</a></li>
+                <li class="list-content"><a class="link-list" href="https://acortar.link/2CGc8p" target="_blank">Thunderbolt</a></li>
             </ul>
         </section><!-- WiFi & Connections -->
 
         <section>
             <h2>Chairs</h2>
             <ul class="list">
-                <li><a class="link-list" href="https://acortar.link/vWei0n" target="_blank">ELABEST</a></li>
-                <li><a class="link-list" href="https://acortar.link/mPyirW" target="_blank">Ofik H1</a></li>
+                <li class="list-content"><a class="link-list" href="https://acortar.link/vWei0n" target="_blank">ELABEST</a></li>
+                <li class="list-content"><a class="link-list" href="https://acortar.link/mPyirW" target="_blank">Ofik H1</a></li>
             </ul>
         </section><!-- Chairs -->
 
         <section>
             <h2>Storage</h2>
             <ul class="list">
-                <li><a class="link-list" href="https://acortar.link/5U57up" target="_blank">LaCie 2TB</a></li>
+                <li class="list-content"><a class="link-list" href="https://acortar.link/5U57up" target="_blank">LaCie 2TB</a></li>
             </ul>
         </section><!-- Storage -->
     </main>
