cambiando el target del link a la nueva pagina

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
             <ul class="list">
                 <li class="list-content"><a class="link-list" href="https://acortar.link/Fpg5qn" target="_blank">Beelink SEi14</a></li>
                 <li class="list-content"><a class="link-list" href="https://acortar.link/J4srHn" target="_blank">Beelink GTi14</a></li>
-                <li class="list-content"><a class="link-list" href="pc.html" target="_blank">PC i7 12th</a></li>
+                <li class="list-content"><a class="link-list" href="pc.html">PC i7 12th</a></li>
             </ul>
         </section><!-- PC -->
 
