--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SetUp</title>
-    <link rel="shortcut icon" href="src/img/tenis.png">
+    <link rel="shortcut icon" href="src/img/setupList.png">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Heebo:wght@100..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
@@ -56,6 +56,7 @@
             <ul class="list">
                 <li class="list-content"><a class="link-list" href="https://acortar.link/xteu9k" target="_blank">HUAWEI D14 i7 14th</a></li>
                 <li class="list-content"><a class="link-list" href="https://acortar.link/T2Cbnr" target="_blank">MacBook Air M2</a></li>
+                <li class="list-content"><a class="link-list" href="https://a.co/d/fA00Obn" target="_blank">Zenbook 14 OLED</a></li>
             </ul>
         </section><!-- Laptops -->
 
