Cmabiando los enlaces de github

--- a/index.html
+++ b/index.html
@@ -125,8 +125,7 @@
 
         <div class="contact">
             <a class="link" href="https://www.linkedin.com/in/cgamcs/" target="_blank">LinkedIn</a>
-            <a class="link" href="https://github.com/cesargmc" target="_blank">GitHub</a>
-            <a class="link" href="mailto:cesar.garciamcs@gmail.com" target="_blank">Email</a>
+            <a class="link" href="https://github.com/cgamcs" target="_blank">GitHub</a>
         </div>
     </footer>
 
