--- a/index.html
+++ b/index.html
@@ -4,23 +4,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SetUp</title>
-    <link rel="shortcut icon" href="src/img/setupList.png">
+    <link rel="shortcut icon" href="src/img/favicon.png">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Heebo:wght@100..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="build/css/app.css">
 </head>
 <body>
-    <!--
-
-    built by cgamcs⠀⠀⠀⠀⠀
-    
-    -->
+    <!-- built by cgamcs -->
     <header class="header">
         <picture>
-            <source srcset="build/img/gallery/full/cesar.avif" type="image/avif">
-            <source srcset="build/img/gallery/full/cesar.webp" type="image/webp">
-            <img width="300" height="200" loading="lazy" src="build/img/gallery/full/cesar.png" alt="">
+            <source srcset="build/img/picofme.avif" type="image/avif">
+            <source srcset="build/img/picofme.webp" type="image/webp">
+            <img width="300" height="200" loading="lazy" src="build/img/picofme.png" alt="">
         </picture>
 
         <div class="contenido-header">
