--- a/index.html
+++ b/index.html
@@ -318,7 +318,7 @@
 
                 <li class="list-content"><a class="link-list" href="https://acortar.link/pRUcjG" target="_blank">UGREEN Carcasa M.2</a></li>
 
-                <li class="list-content"><a class="link-list" href="https://acortar.link/x6yDvu" target="_blank">WD_BLACK 1TB</a></li>
+                <li class="list-content"><a class="link-list" href="https://acortar.link/x6yDvu" target="_blank">WD BLACK 1TB</a></li>
             </ul>
         </section><!-- Storage -->
     </div>
