--- a/index.html
+++ b/index.html
@@ -316,7 +316,7 @@
             <ul class="list">
                 <li class="list-content"><a class="link-list" href="https://acortar.link/5U57up" target="_blank">LaCie 2TB</a></li>
 
-                <li class="list-content"><a class="link-list" href="https://acortar.link/pRUcjG" target="_blank">UGREEN Carcasa M.2</a></li>
+                <li class="list-content"><a class="link-list" href="https://acortar.link/pRUcjG" target="_blank">UGREEN Carcasa M2</a></li>
 
                 <li class="list-content"><a class="link-list" href="https://acortar.link/x6yDvu" target="_blank">WD BLACK 1TB</a></li>
             </ul>
