--- a/index.html
+++ b/index.html
@@ -4,11 +4,21 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SetUp</title>
-    <link rel="shortcut icon" href="src/img/favicon.png">
+    <meta name="description" content="Página de listado">
+    <!-- Preload -->
+    <link rel="preload" href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Playfair+Display:ital,wght@0,400..900;1,400..900&display=swap" crossorigin="crossorigin" as="font">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Playfair+Display:ital,wght@0,400..900;1,400..900&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="build/css/app.css">
+
+    <link rel="preload" href="/src/css/normalize.css" as="stylesheet">
+    <link rel="stylesheet" href="/src/css/normalize.css">
+
+    <link rel="preload" href="/src/css/style.css" as="stylesheet">
+    <link rel="stylesheet" href="/src/css/style.css">
+
+    <!-- Icon -->
+    <link rel="shortcut icon" href="src/img/favicon.png">
 </head>
 <body>
     <!-- built by cgamcs -->
