--- a/index.html
+++ b/index.html
@@ -54,10 +54,29 @@
                 <p>Mi escritorio deseado y gadgets sobre el escritorio.</p>
             </div>
         </div>
+
+        <div class="tarjeta" id="2">
+            <div class="tarjeta-img">
+                <picture>
+                    <source srcset="/src/img/pc.avif" type="image/avif">
+                    <source srcset="/src/img/pc.webp" type="image/webp">
+                    <img width="300" height="200" loading="lazy" src="/src/img/pc.jpg" alt="">
+                </picture>
+            </div>
+
+            <div class="tarjeta-info">
+                <h2>PC Setup</h2>
+
+                <p>Mi configuracion para gaming y productividad.</p>
+            </div>
+        </div>
     </main>
 
     <!-- Desk Setup -->
-    <div class="desk">  </div>
+    <div class="hidden" id="desk">  </div>
+
+    <!-- Desk Setup -->
+    <div class="hidden" id="pc">  </div>
     
 
     <footer class="footer">
@@ -69,7 +88,7 @@
         </div>
     </footer>
 
-    <script src="src/js/app.js"></script>
-    <script src="src/js/db.js"></script>
+    <script defer src="src/js/app.js"></script>
+    <script defer src="src/js/db.js"></script>
 </body>
 </html>
